--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -353,3 +353,11 @@ min-height: 510px;
 ::-webkit-scrollbar-thumb {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
+.mynotificationcss{
+    width: 300px !important;
+}
+.navbar-nav > li > .dropdown-menu {
+margin-top: 0;
+border-top-left-radius: 0;
+border-top-right-radius: 0;
+z-index: 2000;}
